--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,9 +75,11 @@ header h1 {
   letter-spacing: -1px;
   font-size: 72px;
   color: #fff;
-  line-height: 1;
+  line-height: 2;
   margin-bottom: 0.2em;
   width: 540px;
+  background: transparent url('../images/Apssistanticon.png') 0 0 no-repeat;
+  padding-left: 200px;
 }
 
 header h2 {
