--- a/source/Data/css/chooselang.css
+++ b/source/Data/css/chooselang.css
@@ -1,42 +1,55 @@
 li.langLi {
-	display: block;
-	height: 40px;
-	line-height: 40px;
-	text-align: center;
-	min-width: 140px;
-	float: left;
-	margin-right: 10px;
-	margin-bottom: 10px;
-}
-
-li.langLi a {
-	display: block;
-	width: 100`%;
-	height: 100`%;
-	font-weight: 100;
-	color: #D7D7D7;
-}
-
-li.langLi a:hover,
-li.langLi a:active {
-	color: #66CCFF;
-	font-weight: 400;
-}
-
-li.langLi:hover,
-li.langLi:active {
-	border-radius: 6px;
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  min-width: 140px;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 li.langLi:hover {
-	background: #FFFFFF;
+  background: #FFFFFF;
+  border-radius: 4px;
 }
 
 li.langLi:active {
-	background-color: transparent;
+  background-color: transparent;
+  border-radius: 4px;
+}
+
+li.langLi a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-weight: 100;
+  color: #D7D7D7;
+}
+
+li.langLi a:hover, li.langLi a:active {
+  color: #66ccff;
+  font-weight: 400;
 }
 
 li.curLang a {
-	border-radius: 4px;
-	border: 1px solid #D7D7D7;	
+  border-width: 1px;
+  border-style: solid;
+  border-color: #E6E6E6;
+  border-radius: 4px;
+  color: #5E5E5E;
+}
+
+li.curLang a:hover {
+  cursor: default;
+  background-color: transparent;
+}
+
+li.curLang:hover {
+  background-color: transparent;
+  color: #5E5E5E;
+}
+
+li.curLang:hover a {
+  color: #5E5E5E;
 }
